removed overflow:hidden from content div, in order to avoid cutting off menus

--- a/icefaces3/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/css/demo_template.css
+++ b/icefaces3/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/css/demo_template.css
@@ -170,7 +170,7 @@ a:link, a:visited {
 
 
 /* content */
-.mid  { padding-top: 18px; overflow:hidden; }
+.mid  { padding-top: 18px; }
 
 .primary {
 	display: inline-block;
